--- a/package.json
+++ b/package.json
@@ -34,8 +34,10 @@
     "clsx": "^2.1.1",
     "eventemitter3": "^5.0.1",
     "expo-server-sdk": "^3.10.0",
+    "file-type": "^21.1.1",
     "framer-motion": "^12.23.25",
     "html2canvas": "^1.4.1",
+    "isomorphic-dompurify": "^2.34.0",
     "jsonwebtoken": "^9.0.2",
     "lightweight-charts": "^4.2.0",
     "lodash.merge": "^4.6.2",
